--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -43,25 +43,25 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=🦁 Kemono`select`[]🇭🇰 香港均衡`[]🇺🇸 美国均衡`[]🇯🇵 日本均衡`[]🇸🇬 土坡均衡`[]🇹🇼 台湾均衡`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇲🇾 马来西亚`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇮🇳 印度节点`[]🇰🇷 韩国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🐼 Iwara`select`[]🇭🇰 香港均衡`[]🇺🇸 美国均衡`[]🇯🇵 日本均衡`[]🇸🇬 土坡均衡`[]🇹🇼 台湾均衡`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=💾 MEGA`select`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 手动切换`.*
-custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🇲🇾 马来西亚`[]🎯 全球直连
-custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
-custom_proxy_group=📹 YouTube`select`[]🇸🇬 土坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
+custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🇲🇾 马来西亚`[]🎯 全球直连
+custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
+custom_proxy_group=📹 YouTube`select`[]🇸🇬 土坡高速`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
 custom_proxy_group=📺 Bahamut`select`[]🇹🇼 台湾节点`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=📺 Bilibili`select`[]DIRECT`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🚀 节点选择
 custom_proxy_group=🎶 网易音乐`select`[]🎯 全球直连`[]🚀 节点选择`[]♻ 自动选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连`[]🇹🇼 台湾节点`[]🇭🇰 香港节点
-custom_proxy_group=🌍 国外媒体`select`[]🇸🇬 土坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇹🇼 台湾节点`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
-custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=Ⓜ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
+custom_proxy_group=🌍 国外媒体`select`[]🇸🇬 土坡高速`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
+custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=Ⓜ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🇭🇰 香港高速`url-test`!!GROUPID=!1!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港节点`url-test`!!GROUPID=!0!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
