--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -80,7 +80,7 @@ custom_proxy_group=🇮🇳 印度节点`url-test`(印度|India|新德里|孟买
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇦🇺 澳大利亚`url-test`(澳大利亚|Australia)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港均衡`load-balance`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国均衡`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,500,BalanceStrategy::RoundRobin
+custom_proxy_group=🇺🇸 美国均衡`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50,RoundRobin
 custom_proxy_group=🇯🇵 日本均衡`load-balance`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 土坡均衡`load-balance`(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾均衡`load-balance`(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50
