--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -45,8 +45,8 @@ custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=🦁 Kemono`select`[]🇭🇰 香港均衡`[]🇺🇸 美国均衡`[]🇯🇵 日本均衡`[]🇸🇬 土坡均衡`[]🇹🇼 台湾均衡`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇲🇾 马来西亚`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇮🇳 印度节点`[]🇰🇷 韩国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🐼 Iwara`select`[]🇭🇰 香港均衡`[]🇺🇸 美国均衡`[]🇯🇵 日本均衡`[]🇸🇬 土坡均衡`[]🇹🇼 台湾均衡`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🦁 Kemono`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇲🇾 马来西亚`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇮🇳 印度节点`[]🇰🇷 韩国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🐼 Iwara`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=💾 MEGA`select`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 手动切换`.*
 custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🇲🇾 马来西亚`[]🎯 全球直连
 custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
@@ -79,11 +79,8 @@ custom_proxy_group=🇫🇷 法国节点`url-test`(法国|France|巴黎)`http://
 custom_proxy_group=🇮🇳 印度节点`url-test`(印度|India|新德里|孟买)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇦🇺 澳大利亚`url-test`(澳大利亚|Australia)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港均衡`load-balance`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国均衡`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本均衡`load-balance`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 土坡均衡`load-balance`(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾均衡`load-balance`(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=⚖ 番茄轮询`load-balance`!!GROUPID=!1!!`.*
+custom_proxy_group=⚖ 鲤鱼轮询`load-balance`!!GROUPID=!0!!`.*
 ;设置分组标志位
 
 enable_rule_generator=true
