--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -79,9 +79,7 @@ custom_proxy_group=🇫🇷 法国节点`url-test`(法国|France|巴黎)`http://
 custom_proxy_group=🇮🇳 印度节点`url-test`(印度|India|新德里|孟买)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇦🇺 澳大利亚`url-test`(澳大利亚|Australia)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港均衡`load-balance`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=⚖ 番茄轮询`load-balance`!!GROUPID=!1!!`select`.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=⚖ 鲤鱼轮询`load-balance`!!GROUPID=!0!!`select`.*`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=⚖ 番茄轮询`load-balance`!!GROUPID=!1!!`http://cp.cloudflare.com/generate_204`300,,50
 ;设置分组标志位
 
 enable_rule_generator=true
