--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -40,18 +40,18 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=🦁 Kemono`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇲🇾 马来西亚`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇮🇳 印度节点`[]🇰🇷 韩国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🐼 Iwara`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=💾 MEGA`select`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 手动切换`.*
+custom_proxy_group=📲 Telegram`select`[]⚖ 番茄轮询`[]⚖ 鲤鱼轮询`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🦁 Kemono`select`[]⚖ 番茄轮询`[]⚖ 鲤鱼轮询`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇲🇾 马来西亚`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇮🇳 印度节点`[]🇰🇷 韩国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🐼 Iwara`select`[]⚖ 番茄轮询`[]⚖ 鲤鱼轮询`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=💾 MEGA`select`[]⚖ 番茄轮询`[]⚖ 鲤鱼轮询`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 手动切换`.*
 custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🇲🇾 马来西亚`[]🎯 全球直连
 custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
 custom_proxy_group=📹 YouTube`select`[]🇸🇬 土坡高速`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
-custom_proxy_group=📺 Bahamut`select`[]🇹🇼 台湾节点`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=📺 Bahamut`select`[]🇹🇼 台湾高速`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=📺 Bilibili`select`[]DIRECT`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🚀 节点选择
 custom_proxy_group=🎶 网易音乐`select`[]🎯 全球直连`[]🚀 节点选择`[]♻ 自动选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连`[]🇹🇼 台湾节点`[]🇭🇰 香港节点
