--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -1,5 +1,4 @@
 [custom]
-;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
@@ -37,9 +36,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=🎯 全球直连,[]GEOIP,LAN,no-resolve
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
-;设置规则标志位
 
-;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
@@ -63,25 +60,24 @@ custom_proxy_group=Ⓜ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港
 custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🇭🇰 香港高速`url-test`!!GROUPID=!1!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港节点`url-test`!!GROUPID=!0!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国高速`url-test`!!GROUPID=!1!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国节点`url-test`!!GROUPID=!0!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本高速`url-test`!!GROUPID=!1!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`!!GROUPID=!0!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 土坡高速`url-test`!!GROUPID=!1!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 土坡节点`url-test`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾高速`url-test`!!GROUPID=!1!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾节点`url-test`!!GROUPID=!0!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇲🇾 马来西亚`url-test`(马来|西亚|MY)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇩🇪 德国节点`url-test`(德国|Germany|柏林|法兰克福)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇫🇷 法国节点`url-test`(法国|France|巴黎)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇮🇳 印度节点`url-test`(印度|India|新德里|孟买)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇦🇺 澳大利亚`url-test`(澳大利亚|Australia)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港高速`fallback`!!GROUPID=!1!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港节点`fallback`!!GROUPID=!0!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国高速`fallback`!!GROUPID=!1!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国节点`fallback`!!GROUPID=!0!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本高速`fallback`!!GROUPID=!1!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`fallback`!!GROUPID=!0!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 土坡高速`fallback`!!GROUPID=!1!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 土坡节点`fallback`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾高速`fallback`!!GROUPID=!1!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾节点`fallback`!!GROUPID=!0!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇲🇾 马来西亚`fallback`(马来|西亚|MY)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇩🇪 德国节点`fallback`(德国|Germany|柏林|法兰克福)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇫🇷 法国节点`fallback`(法国|France|巴黎)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇮🇳 印度节点`fallback`(印度|India|新德里|孟买)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国节点`fallback`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇦🇺 澳大利亚`fallback`(澳大利亚|Australia)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=⚖ 番茄轮询`load-balance`!!GROUPID=!1!!(.*)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=⚖ 鲤鱼轮询`load-balance`!!GROUPID=!0!!(.*)`http://cp.cloudflare.com/generate_204`300,,50
-;设置分组标志位
 
 enable_rule_generator=true
 overwrite_original_rules=true
