--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -23,7 +23,6 @@ ruleset=🎶 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scri
 ruleset=📺 Bahamut,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
 ruleset=📺 Bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=📺 Bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
-ruleset=🎶 网易音乐,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.list
 ruleset=🌍 国内媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=🎮 Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
@@ -37,28 +36,27 @@ ruleset=🎯 全球直连,[]GEOIP,LAN,no-resolve
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]⚖ 番茄轮询`[]⚖ 鲤鱼轮询`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=📲 Telegram`select`[]⚖ 番茄轮询`[]⚖ 鲤鱼轮询`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=📲 Telegram`select`[]⚖ 番茄轮询`[]⚖ 鲤鱼轮询`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=🦁 Kemono`select`[]⚖ 番茄轮询`[]⚖ 鲤鱼轮询`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇲🇾 马来西亚`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇮🇳 印度节点`[]🇰🇷 韩国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🐼 Iwara`select`[]⚖ 番茄轮询`[]⚖ 鲤鱼轮询`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=💾 MEGA`select`[]⚖ 番茄轮询`[]⚖ 鲤鱼轮询`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 手动切换`.*
-custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🇲🇾 马来西亚`[]🎯 全球直连
-custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
-custom_proxy_group=📹 YouTube`select`[]🇸🇬 土坡高速`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
+custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🇲🇾 马来西亚
+custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择
+custom_proxy_group=📹 YouTube`select`[]🇸🇬 土坡高速`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择
 custom_proxy_group=📺 Bahamut`select`[]🇹🇼 台湾高速`[]🚀 节点选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=📺 Bilibili`select`[]DIRECT`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🚀 节点选择
-custom_proxy_group=🎶 网易音乐`select`[]🎯 全球直连`[]🚀 节点选择`[]♻ 自动选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连`[]🇹🇼 台湾节点`[]🇭🇰 香港节点
-custom_proxy_group=🌍 国外媒体`select`[]🇸🇬 土坡高速`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
+custom_proxy_group=🌍 国外媒体`select`[]🇸🇬 土坡高速`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择
 custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=Ⓜ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`.*`[]🎯 全球直连
+custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择`[]🎯 全球直连
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🇭🇰 香港高速`fallback`!!GROUPID=!1!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港节点`fallback`!!GROUPID=!0!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
