--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -36,42 +36,39 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]⚖ 番茄轮询`[]⚖ 鲤鱼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=📲 Telegram`select`[]⚖ 番茄轮询`[]⚖ 鲤鱼轮询`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🦁 Kemono`select`[]⚖ 番茄轮询`[]⚖ 鲤鱼轮询`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇲🇾 马来西亚`[]🇯🇵 日本节点`[]🇸🇬 土坡节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇮🇳 印度节点`[]🇰🇷 韩国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🐼 Iwara`select`[]⚖ 番茄轮询`[]⚖ 鲤鱼轮询`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=💾 MEGA`select`[]⚖ 番茄轮询`[]⚖ 鲤鱼轮询`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 手动切换
-custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🇲🇾 马来西亚`[]🚀 手动切换
-custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择
-custom_proxy_group=📹 YouTube`select`[]🇸🇬 土坡高速`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择
-custom_proxy_group=📺 Bilibili`select`[]DIRECT`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连`[]🇹🇼 台湾节点`[]🇭🇰 香港节点
-custom_proxy_group=🌍 国外媒体`select`[]🇸🇬 土坡高速`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=Ⓜ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 节点选择`[]♻ 自动选择`[]🎯 全球直连
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 番茄香港`[]🇭🇰 牛逼香港`[]🇹🇼 牛逼台湾`[]🇹🇼 番茄台湾`[]🇺🇸 番茄美国`[]🇺🇸 牛逼美国`[]🇯🇵 番茄日本`[]🇯🇵 牛逼日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇸🇬 牛逼土坡`[]🇲🇾 马来西亚`[]🇰🇷 牛逼韩国`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🚀 GitHub`select`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=📲 Telegram`select`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🇰🇷 牛逼韩国`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🦁 Kemono`select`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]🇭🇰 牛逼香港`[]🇺🇸 牛逼美国`[]🇲🇾 马来西亚`[]🇯🇵 牛逼日本`[]🇸🇬 牛逼土坡`[]🇹🇼 牛逼台湾`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🐼 Iwara`select`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=💾 MEGA`select`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]🇰🇷 牛逼韩国`[]🇮🇳 印度节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇦🇺 澳大利亚`[]🚀 手动切换
+custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🇲🇾 马来西亚`[]🚀 手动切换
+custom_proxy_group=🎶 TikTok`select`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择
+custom_proxy_group=📹 YouTube`select`[]🇸🇬 番茄土坡`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🇰🇷 牛逼韩国`[]🚀 节点选择`[]♻ 自动选择
+custom_proxy_group=📺 Bilibili`select`[]DIRECT`[]🇭🇰 番茄香港`[]🇹🇼 番茄台湾`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连`[]🇹🇼 番茄台湾`[]🇭🇰 番茄香港
+custom_proxy_group=🌍 国外媒体`select`[]🇸🇬 番茄土坡`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🇰🇷 牛逼韩国`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🎯 全球直连`[]🚀 手动切换
+custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🇰🇷 牛逼韩国`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=Ⓜ 微软服务`select`[]🎯 全球直连`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🇰🇷 牛逼韩国`[]🚀 节点选择`[]♻ 自动选择`[]🎯 全球直连
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🇭🇰 香港高速`fallback`!!GROUPID=!1!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港节点`fallback`!!GROUPID=!0!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国高速`fallback`!!GROUPID=!1!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国节点`fallback`!!GROUPID=!0!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本高速`fallback`!!GROUPID=!1!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`fallback`!!GROUPID=!0!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 土坡高速`fallback`!!GROUPID=!1!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 土坡节点`fallback`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾高速`fallback`!!GROUPID=!1!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾节点`fallback`!!GROUPID=!0!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇲🇾 马来西亚`fallback`(马来|西亚|MY)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇩🇪 德国节点`fallback`(德国|Germany|柏林|法兰克福)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇫🇷 法国节点`fallback`(法国|France|巴黎)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇮🇳 印度节点`fallback`(印度|India|新德里|孟买)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国节点`fallback`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇦🇺 澳大利亚`fallback`(澳大利亚|Australia)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=⚖ 番茄轮询`load-balance`!!GROUPID=!1!!(.*)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=⚖ 鲤鱼轮询`load-balance`!!GROUPID=!0!!(.*)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 番茄香港`fallback`!!GROUPID=!1!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=🇭🇰 牛逼香港`fallback`!!GROUPID=!0!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=🇺🇸 番茄美国`fallback`!!GROUPID=!1!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=🇺🇸 牛逼美国`fallback`!!GROUPID=!0!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=🇯🇵 番茄日本`fallback`!!GROUPID=!1!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=🇯🇵 牛逼日本`fallback`!!GROUPID=!0!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=🇸🇬 番茄土坡`fallback`!!GROUPID=!1!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=🇸🇬 牛逼土坡`fallback`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=🇹🇼 番茄台湾`fallback`!!GROUPID=!1!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=🇹🇼 牛逼台湾`fallback`!!GROUPID=!0!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=🇲🇾 马来西亚`fallback`(马来|西亚|MY)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=🇰🇷 牛逼韩国`fallback`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=🇦🇺 澳大利亚`fallback`(澳大利亚|Australia)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=⚖ 番茄轮询`load-balance`!!GROUPID=!1!!(.*)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=⚖ 牛逼轮询`load-balance`!!GROUPID=!0!!(.*)`http://cp.cloudflare.com/generate_204`180
 
 enable_rule_generator=true
 overwrite_original_rules=true
