--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -42,13 +42,13 @@ custom_proxy_group=📲 Telegram`select`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]
 custom_proxy_group=🦁 Kemono`select`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]🇭🇰 牛逼香港`[]🇺🇸 牛逼美国`[]🇲🇾 马来西亚`[]🇯🇵 牛逼日本`[]🇸🇬 牛逼土坡`[]🇹🇼 牛逼台湾`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🐼 Iwara`select`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=💾 MEGA`select`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🇲🇾 马来西亚`[]🚀 手动切换
+custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🎶 TikTok`select`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择
 custom_proxy_group=📹 YouTube`select`[]🇸🇬 番茄土坡`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🇰🇷 牛逼韩国`[]🚀 节点选择`[]♻ 自动选择
-custom_proxy_group=📺 Bilibili`select`[]DIRECT`[]🇭🇰 番茄香港`[]🇹🇼 番茄台湾`[]🚀 节点选择`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 Bilibili`select`[]DIRECT`[]🇭🇰 番茄香港`[]🇹🇼 番茄台湾`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连`[]🇹🇼 番茄台湾`[]🇭🇰 番茄香港
 custom_proxy_group=🌍 国外媒体`select`[]🇸🇬 番茄土坡`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🇰🇷 牛逼韩国`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🎯 全球直连`[]🚀 手动切换
+custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🇰🇷 牛逼韩国`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=Ⓜ 微软服务`select`[]🎯 全球直连`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
