--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -36,12 +36,12 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 番茄香港`[]🇭🇰 牛逼香港`[]🇹🇼 牛逼台湾`[]🇹🇼 番茄台湾`[]🇺🇸 番茄美国`[]🇺🇸 牛逼美国`[]🇯🇵 番茄日本`[]🇯🇵 牛逼日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇸🇬 牛逼土坡`[]🇲🇾 马来西亚`[]🇰🇷 牛逼韩国`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 番茄香港`[]🇭🇰 牛逼香港`[]🇹🇼 牛逼台湾`[]🇹🇼 番茄台湾`[]🇺🇸 番茄美国`[]🇺🇸 牛逼美国`[]🇯🇵 番茄日本`[]🇯🇵 牛逼日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇸🇬 牛逼土坡`[]🇲🇾 马来西亚`[]🇰🇷 牛逼韩国`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]⬇️ 下载服务`[]🚀 手动切换
 custom_proxy_group=🚀 GitHub`select`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=📲 Telegram`select`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🇰🇷 牛逼韩国`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🦁 Kemono`select`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]🇭🇰 牛逼香港`[]🇺🇸 牛逼美国`[]🇲🇾 马来西亚`[]🇯🇵 牛逼日本`[]🇸🇬 牛逼土坡`[]🇹🇼 牛逼台湾`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=📲 Telegram`select`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🇰🇷 牛逼韩国`[]⬇️ 下载服务`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🦁 Kemono`select`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]🇭🇰 牛逼香港`[]🇺🇸 牛逼美国`[]🇲🇾 马来西亚`[]🇯🇵 牛逼日本`[]🇸🇬 牛逼土坡`[]🇹🇼 牛逼台湾`[]⬇️ 下载服务`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🐼 Iwara`select`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=💾 MEGA`select`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=💾 MEGA`select`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]⬇️ 下载服务`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🎶 TikTok`select`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇸🇬 番茄土坡`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择
 custom_proxy_group=📹 YouTube`select`[]🇸🇬 番茄土坡`[]🇭🇰 番茄香港`[]🇺🇸 番茄美国`[]🇯🇵 番茄日本`[]🇹🇼 番茄台湾`[]🇲🇾 马来西亚`[]🇰🇷 牛逼韩国`[]🚀 节点选择`[]♻ 自动选择
