--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -36,23 +36,23 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇹🇼 台湾高速`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇹🇼 台湾高速`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇹🇼 台湾高速`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🦁 Kemono`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇹🇼 台湾高速`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🐼 Iwara`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇹🇼 台湾高速`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=💾 MEGA`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇹🇼 台湾高速`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🦁 Kemono`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🐼 Iwara`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=💾 MEGA`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择
-custom_proxy_group=📹 YouTube`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇹🇼 台湾高速`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=📹 YouTube`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=📺 Bilibili`select`[]DIRECT`[]🇭🇰 香港高速`[]🇹🇼 台湾高速`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连`[]🇹🇼 台湾高速`[]🇭🇰 香港高速
-custom_proxy_group=🌍 国外媒体`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇹🇼 台湾高速`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🌍 国外媒体`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇹🇼 台湾高速`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=Ⓜ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇹🇼 台湾高速`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🇭🇰 香港高速`fallback`!!GROUPID=!1!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`180
 custom_proxy_group=🇭🇰 香港节点`fallback`!!GROUPID=!0!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`180
