--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -9,6 +9,7 @@ ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Steam_CDN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.list
+ruleset=𝕏 Twitter,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Twitter/Twitter.list
 ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=💾 MEGA,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/MEGA/MEGA.list
 ruleset=🦁 Kemono,https://raw.githubusercontent.com/request-code/qx/refs/heads/main/rule/kemono.list
@@ -38,6 +39,7 @@ custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=𝕏 Twitter`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🦁 Kemono`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🐼 Iwara`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
