--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -36,7 +36,8 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=♻ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=♻ 红杏自动`url-test`!!GROUPID=!1!!.*`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=♻ 牛逼自动`url-test`!!GROUPID=!0!!.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
 custom_proxy_group=𝕏 Twitter`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
