--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -36,41 +36,42 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=♻ 红杏自动`url-test`!!GROUPID=!1!!.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=♻ 牛逼自动`url-test`!!GROUPID=!0!!.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=𝕏 Twitter`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🦁 Kemono`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🐼 Iwara`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=💾 MEGA`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🎶 TikTok`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择
-custom_proxy_group=📹 YouTube`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=📺 Bilibili`select`[]DIRECT`[]🇭🇰 香港高速`[]🇹🇼 台湾高速`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连`[]🇹🇼 台湾高速`[]🇭🇰 香港高速
-custom_proxy_group=🌍 国外媒体`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=Ⓜ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港高速`[]🇺🇸 美国高速`[]🇯🇵 日本高速`[]🇸🇬 土坡高速`[]🇹🇼 台湾高速`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港高速`[]🇭🇰 香港节点`[]🇹🇼 台湾高速`[]🇹🇼 台湾节点`[]🇺🇸 美国高速`[]🇺🇸 美国节点`[]🇯🇵 日本高速`[]🇯🇵 日本节点`[]🇸🇬 土坡高速`[]🇸🇬 土坡节点`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 番茄轮询`[]⚖ 牛逼轮询`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=♻ 主用自动`url-test`!!GROUPID=!1!!.*`http://cp.cloudflare.com/generate_204`180,,50
+custom_proxy_group=♻ 备用自动`url-test`!!GROUPID=!0!!.*`http://cp.cloudflare.com/generate_204`180,,50
+custom_proxy_group=🪢 主用聚合`url-test`!!GROUPID=!1!!(澳门|印度|意大利|智利|法国|哥伦比亚|莫斯科|菲律宾|尼日利亚|土耳其|马来|泰国|南非|英国|越南|以色列|沙特|迪拜|澳大利亚|加拿大|墨西哥|瑞典|西班牙|巴西|荷兰|德国)`http://cp.cloudflare.com/generate_204`180,,50
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 主用轮询`[]⚖ 备用轮询`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
+custom_proxy_group=🚀 GitHub`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 主用轮询`[]⚖ 备用轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=𝕏 Twitter`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 主用轮询`[]⚖ 备用轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=📲 Telegram`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 主用轮询`[]⚖ 备用轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🦁 Kemono`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 主用轮询`[]⚖ 备用轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🐼 Iwara`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 主用轮询`[]⚖ 备用轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=💾 MEGA`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 主用轮询`[]⚖ 备用轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 主用香港`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇹🇼 主用台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🎶 TikTok`select`[]🇭🇰 主用香港`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇹🇼 主用台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择
+custom_proxy_group=📹 YouTube`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇹🇼 主用台湾`[]🇸🇬 备用土坡`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 主用轮询`[]⚖ 备用轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=📺 Bilibili`select`[]DIRECT`[]🇭🇰 主用香港`[]🇹🇼 主用台湾`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连`[]🇹🇼 主用台湾`[]🇭🇰 主用香港
+custom_proxy_group=🌍 国外媒体`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 主用轮询`[]⚖ 备用轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 主用香港`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇹🇼 主用台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 主用轮询`[]⚖ 备用轮询`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 主用香港`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇹🇼 主用台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=Ⓜ 微软服务`select`[]🎯 全球直连`[]🇭🇰 主用香港`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇹🇼 主用台湾`[]🇲🇾 马来西亚`[]🚀 节点选择`[]♻ 自动选择`[]🚀 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]🇲🇾 马来西亚`[]🇰🇷 韩国节点`[]⚖ 主用轮询`[]⚖ 备用轮询`[]♻ 自动选择`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🇭🇰 香港高速`url-test`!!GROUPID=!1!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇭🇰 香港节点`url-test`!!GROUPID=!0!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`180
-custom_proxy_group=🇺🇸 美国高速`url-test`!!GROUPID=!1!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇺🇸 美国节点`url-test`!!GROUPID=!0!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇯🇵 日本高速`url-test`!!GROUPID=!1!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`!!GROUPID=!0!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇸🇬 土坡高速`url-test`!!GROUPID=!1!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇸🇬 土坡节点`url-test`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇹🇼 台湾高速`url-test`!!GROUPID=!1!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=🇹🇼 台湾节点`url-test`!!GROUPID=!0!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`180,,50
+custom_proxy_group=🇭🇰 主用香港`url-test`!!GROUPID=!1!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`180,,50
+custom_proxy_group=🇭🇰 备用香港`url-test`!!GROUPID=!0!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=🇺🇸 主用美国`url-test`!!GROUPID=!1!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`180,,50
+custom_proxy_group=🇺🇸 备用美国`url-test`!!GROUPID=!0!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`180,,50
+custom_proxy_group=🇯🇵 主用日本`url-test`!!GROUPID=!1!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`180,,50
+custom_proxy_group=🇯🇵 备用日本`url-test`!!GROUPID=!0!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`180,,50
+custom_proxy_group=🇸🇬 主用土坡`url-test`!!GROUPID=!1!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`180,,50
+custom_proxy_group=🇸🇬 备用土坡`url-test`!!GROUPID=!0!!(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`180,,50
+custom_proxy_group=🇹🇼 主用台湾`url-test`!!GROUPID=!1!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`180,,50
+custom_proxy_group=🇹🇼 备用台湾`url-test`!!GROUPID=!0!!(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`180,,50
 custom_proxy_group=🇲🇾 马来西亚`url-test`(马来|西亚|MY)`http://cp.cloudflare.com/generate_204`180,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`180,,50
-custom_proxy_group=⚖ 番茄轮询`load-balance`!!GROUPID=!1!!(.*)`http://cp.cloudflare.com/generate_204`180
-custom_proxy_group=⚖ 牛逼轮询`load-balance`!!GROUPID=!0!!(.*)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=⚖ 主用轮询`load-balance`!!GROUPID=!1!!(.*)`http://cp.cloudflare.com/generate_204`180
+custom_proxy_group=⚖ 备用轮询`load-balance`!!GROUPID=!0!!(.*)`http://cp.cloudflare.com/generate_204`180
 
 enable_rule_generator=true
 overwrite_original_rules=true
