--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -38,13 +38,13 @@ custom_proxy_group=💾 MEGA`select`[]🇭🇰 主用香港`[]🇭🇰 备用香
 custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 主用香港`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇹🇼 主用台湾`[]🚀 节点选择`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
 custom_proxy_group=🎶 TikTok`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
 custom_proxy_group=📹 YouTube`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连`[]🇹🇼 主用台湾`[]🇭🇰 主用香港
 custom_proxy_group=🌍 国外媒体`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
 custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 主用香港`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇹🇼 主用台湾`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
 custom_proxy_group=🍎 苹果服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=Ⓜ 微软服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻ 主用自动`url-test`!!GROUPID=!1!!.*`http://www.gstatic.com/generate_204`300,,50
