--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -33,25 +33,24 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=🚀 GitHub`select`[]🇭🇰 主用香港`[]🇹🇼 主用台湾`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=📲 Telegram`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=🦁 Kemono`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=💾 MEGA`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 主用香港`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇹🇼 主用台湾`[]🚀 节点选择`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=🎶 TikTok`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=📹 YouTube`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=🌍 国外媒体`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
+custom_proxy_group=🚀 GitHub`select`[]🇭🇰 主用香港`[]🇹🇼 主用台湾`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
+custom_proxy_group=📲 Telegram`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
+custom_proxy_group=🦁 Kemono`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
+custom_proxy_group=💾 MEGA`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
+custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 主用香港`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇹🇼 主用台湾`[]🚀 节点选择`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
+custom_proxy_group=🎶 TikTok`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
+custom_proxy_group=📹 YouTube`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
+custom_proxy_group=🌍 国外媒体`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
 custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 主用香港`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]🇹🇼 主用台湾`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换
-custom_proxy_group=🍎 苹果服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=Ⓜ 微软服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换`[]🎯 全球直连
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🪢 主用聚合`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
+custom_proxy_group=🍎 苹果服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=Ⓜ 微软服务`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换`[]🎯 全球直连
+custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换`[]🎯 全球直连
 custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=♻ 主用自动`url-test`!!GROUPID=!1!!.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻ 备用自动`url-test`!!GROUPID=!0!!.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🪢 主用聚合`url-test`!!GROUPID=!1!!(澳门|印度|意大利|智利|法国|哥伦比亚|莫斯科|菲律宾|尼日利亚|土耳其|马来|泰国|南非|英国|越南|以色列|沙特|迪拜|澳大利亚|加拿大|墨西哥|瑞典|西班牙|巴西|荷兰|德国)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 主用香港`url-test`!!GROUPID=!1!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 备用香港`url-test`!!GROUPID=!0!!(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🇺🇸 主用美国`url-test`!!GROUPID=!1!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,50
