--- a/Custom_Clash.ini
+++ b/Custom_Clash.ini
@@ -34,7 +34,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
-custom_proxy_group=🚀 GitHub`select`[]🇭🇰 主用香港`[]🇹🇼 主用台湾`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
+custom_proxy_group=🚀 GitHub`select`[]🇭🇰 主用香港`[]🇹🇼 主用台湾`[]🇺🇸 主用美国`[]🇯🇵 主用日本`[]🇸🇬 主用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📲 Telegram`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
 custom_proxy_group=🦁 Kemono`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
 custom_proxy_group=💾 MEGA`select`[]🇭🇰 主用香港`[]🇭🇰 备用香港`[]🇹🇼 主用台湾`[]🇹🇼 备用台湾`[]🇺🇸 主用美国`[]🇺🇸 备用美国`[]🇯🇵 主用日本`[]🇯🇵 备用日本`[]🇸🇬 主用土坡`[]🇸🇬 备用土坡`[]♻ 主用自动`[]♻ 备用自动`[]🚀 手动切换
